--- a/index.html
+++ b/index.html
@@ -4,48 +4,10 @@
     <meta charset="UTF-8">
     <title>Moneyhelper Demo</title>
     <style>
-        label {
-            display: inline-block;
-            width: 200px;
-        }
 
-        .result {
-            border: solid 1px lightskyblue;
-            min-width: 184px;
-            min-height: 2em;
-            background-color: #ffE000;
-            padding: 5px;
-            display: inline-block;
-            border-radius: 4px;
-            padding-top: 5px;
-            padding-bottom: 5px;
-        }
-
-        input {
-            padding: 5px;
-        }
-
-        input, button, select {
-            font-size: 16px;
-        }
-
-        label {
-            font-size: 14px;
-        }
-
-        button {
-            border-radius: 4px;
-        }
-
-        input {
-            border-radius: 4px;
-        }
-
-        .resultWrap {
-            margin-top: 10px;
-        }
     </style>
     <link rel="stylesheet" href="lib/bootstrap/dist/css/bootstrap.min.css"/>
+    <link rel="stylesheet" href="css/site.css"/>
 </head>
 
 <body ng-app="moneyDemo" ng-controller="demoController" ng-cloak>
