--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body ng-app="moneyDemo" ng-controller="demoController" ng-cloak>
 
 <div class="container">
-    <h2 class="row">Moneyhelper Demo</h2>
+    <h2 class="row">Moneyhelper Service Demo</h2>
     <div class="row">
         <div class="col-md-4 form-group">
             <h4>Format Currency</h4>
@@ -54,8 +54,22 @@
     </div>
 
     <br/>
+    <h2 class="row">Moneyhelper Filter Demo</h2>
+    <div class="row">
+        <div class="col-md-4 form-group">
+            <h4>Filter format currency using current settings</h4>
+            <label class="text-muted" for="currency1">Amount
+            </label>
+            <input type="text" class="form-group" id="filter1" placeholder="Enter amount: 123.45"
+                   ng-model="amountFilter">
+            <div class="resultWrap">
+                <div class="result">{{amountFilter | moneyhelper}}</div>
+            </div>
+        </div>
+    </div>
 
-    <h4 class="row col-md-12">Settings</h4>
+    <br/>
+    <h2 class="row col-md-12">Settings</h4>
 
     <div class="row">
 
@@ -104,6 +118,11 @@
                     </select>
                 </div>
             </div>
+
+            <div>
+                <button class="button btn-primary" ng-click="applySettings()">Apply</button>
+            </div>
+
         </div>
     </div>
 </div>
